--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
-	<h1>
-		你好世界
-	</h1>
-	<p>
-		第一句话
-	</p>
+<body>
+<h1>你好世界</h1>
+<p>第一句话</p>
+</body>
 </html>
